# cross-ping

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
cross-ping-eth/: .env.example  hardhat.config.js  package.json
cross-ping-eth/contracts/: cross-ping.sol
cross-ping-eth/scripts/: deploy.js  sendPing.js
cross-ping-vara/: Cargo.toml  README.md  build.rs  cross_ping.idl  package.json  ping.js
cross-ping-vara/app/: Cargo.toml
cross-ping-vara/app/src/: lib.rs  receiver.rs  sender.rs
eth-pinger/: README.md  package.json
eth-pinger/contracts/: ping-receiver.sol
eth-pinger/scripts/: deploy.js
ping-receiver/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
ping-receiver/app/: Cargo.toml
ping-receiver/app/src/: lib.rs
ping-receiver/client/: Cargo.toml
relayer/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
relayer/src/: api.ts  config.ts  ethereum.ts  helper.ts  main.ts  types.ts  vara.ts
relayer/src/relayers/: eth-to-vara.ts  vara-to-eth.ts
